MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Resale_Account__c.field-meta.xml
<CustomField>
    <fullName>Resale_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resale Account</label>
    <type>Checkbox</type>
</CustomField>