MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Send_KYC_Verification_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_KYC_Verification_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send KYC Verification Email</label>
    <type>Checkbox</type>
</CustomField>