MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Share_Account__c.field-meta.xml
<CustomField>
    <fullName>Share_Account__c</fullName>
    <label>Share Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Do No Share</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>