MODON MRE BPDEV/force-app/main/default/objects/Account/fields/SPA_Resident_Condition__c.field-meta.xml
<CustomField>
    <fullName>SPA_Resident_Condition__c</fullName>
    <formula>IF(  IsPersonAccount, IF(ISPICKVAL( UAE_Resident_Status__pc , &quot;Resident&quot;), &quot;Yes&quot;, &quot;No&quot;) , &quot;N/A&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPA Resident Condition</label>
    <type>Text</type>
</CustomField>