MODON MRE BPDEV/force-app/main/default/objects/Account/fields/SPA_Resident_Condition_Arabic__c.field-meta.xml
<CustomField>
    <fullName>SPA_Resident_Condition_Arabic__c</fullName>
    <formula>IF(  IsPersonAccount, IF(ISPICKVAL( UAE_Resident_Status__pc , &quot;Resident&quot;), &quot;نعم&quot;, &quot;لا&quot;) , &quot;لا ينطبق&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPA Resident Condition Arabic</label>
    <type>Text</type>
</CustomField>