MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Sub_Classification__c.field-meta.xml
<CustomField>
    <fullName>Sub_Classification__c</fullName>
    <formula>IF( NoOfPropertyPurchasedWithModon__c !=null,  IF(NoOfPropertyPurchasedWithModon__c&gt;3, &apos;Bulk&apos;,&apos;Retail&apos;) , IF(NoOfPropertyPurchasedWithModon__pc!=null,IF(NoOfPropertyPurchasedWithModon__pc&gt;3, &apos;Bulk&apos;,&apos;Retail&apos;), &apos;&apos;))</formula>
    <label>Sub Classification</label>
    <type>Text</type>
</CustomField>