MODON MRE BPDEV/force-app/main/default/objects/Account/fields/SuperAppDeviceToken__c.field-meta.xml
<CustomField>
    <fullName>SuperAppDeviceToken__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SuperAppDeviceToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>