MODON MRE BPDEV/force-app/main/default/objects/Account/fields/SuperAppDeviceType__c.field-meta.xml
<CustomField>
    <fullName>SuperAppDeviceType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SuperAppDeviceType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>