MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Total_Sales_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Amount__c</fullName>
    <label>Total Sales Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>