MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Total_Sold_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Sold_Value__c</fullName>
    <label>Total Sold Value</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>