MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Trade_License_Number_Masked__c.field-meta.xml
<CustomField>
    <fullName>Trade_License_Number_Masked__c</fullName>
    <label>Trade License Number</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>