MODON MRE BPDEV/force-app/main/default/objects/Account/fields/UAE_VAT_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>UAE_VAT_Expiry_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UAE VAT Expiry Date</label>
    <type>Date</type>
</CustomField>