MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Unified_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Unified_Number_Formula__c</fullName>
    <formula>UnifiedNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unified Number Formula</label>
    <type>Text</type>
</CustomField>