MODON MRE BPDEV/force-app/main/default/objects/Account/fields/VAT_Status__c.field-meta.xml
<CustomField>
    <fullName>VAT_Status__c</fullName>
    <label>VAT Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>