MODON MRE BPDEV/force-app/main/default/objects/Account/fields/VMSID__c.field-meta.xml
<CustomField>
    <fullName>VMSID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>VMS ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>