MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Xebo_Response__c.field-meta.xml
<CustomField>
    <fullName>Xebo_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Xebo Response</label>
    <type>TextArea</type>
</CustomField>