MODON MRE BPDEV/force-app/main/default/objects/Account/recordTypes/Ambassador.recordType-meta.xml
<RecordType>
    <fullName>Ambassador</fullName>
    <active>true</active>
    <description>Used By Modon - Egypt</description>
    <label>Ambassador</label>
</RecordType>