MODON MRE BPDEV/force-app/main/default/objects/Account/recordTypes/Broker_Agency.recordType-meta.xml
<RecordType>
    <fullName>Broker_Agency</fullName>
    <active>true</active>
    <description>Use this option to create the Broker Agency records</description>
    <label>Broker Agency</label>
</RecordType>