MODON MRE BPDEV/force-app/main/default/objects/Account/recordTypes/OrganizationAccount.recordType-meta.xml
<RecordType>
    <fullName>OrganizationAccount</fullName>
    <active>true</active>
    <description>For capturing Company Accounts and relate it with Contact</description>
    <label>Organization Account</label>
</RecordType>