MODON MRE BPDEV/force-app/main/default/objects/Account/recordTypes/Sales_Admin.recordType-meta.xml
<RecordType>
    <fullName>Sales_Admin</fullName>
    <active>true</active>
    <description>Used By Modon - Egypt</description>
    <label>Sales Admin</label>
</RecordType>