MODON MRE BPDEV/force-app/main/default/objects/Account/validationRules/IBAN_Number_Validation_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>IBAN_Number_Validation_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(IBAN_Number__c),OR(
    ISBLANK(IBAN_Number__c),
    LEN(IBAN_Number__c) &lt;&gt; 23
), NOT(ISPICKVAL(Source_Entity__c , &apos;Modon - Egypt&apos;)))</errorConditionFormula>
    <errorDisplayField>IBAN_Number__c</errorDisplayField>
    <errorMessage>IBAN must be exactly 23 characters long.</errorMessage>
</ValidationRule>