MODON MRE BPDEV/force-app/main/default/objects/Account/validationRules/MBP_PreventAgencyStatusUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>MBP_PreventAgencyStatusUpdate</fullName>
    <active>false</active>
    <errorConditionFormula>AND(

    ISCHANGED(Agency_Status__c),

    OR(
        ISPICKVAL(PRIORVALUE(Agency_Status__c),&quot;In Active&quot;),
        ISPICKVAL(PRIORVALUE(Agency_Status__c),&quot;Suspended&quot;),
        ISPICKVAL(PRIORVALUE(Agency_Status__c),&quot;Rejected&quot;),
        ISPICKVAL(PRIORVALUE(Agency_Status__c),&quot;Blocked&quot;)
    ),

    OR(
        ISPICKVAL(Agency_Status__c,&quot;Active&quot;),
        ISPICKVAL(Agency_Status__c,&quot;Pending Verification&quot;)
    )

)</errorConditionFormula>
    <errorMessage>Agency Status cannot be changed to Active or Pending Verification when the current status is In Active, Suspended, Rejected, or Blocked.</errorMessage>
</ValidationRule>