MODON MRE BPDEV/force-app/main/default/objects/Account/validationRules/Merge_Account_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>Merge_Account_Access</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Is_Merged__c = TRUE,
    NOT(
        OR(
            $Profile.Name = &quot;System Administrator&quot;,
            $Profile.Name = &quot;Support Team&quot;,
            $Permission.Can_Approve_Account_Merge
        )
    )
)</errorConditionFormula>
    <errorMessage>This record is merged and cannot be edited. Please contact the Support Team.</errorMessage>
</ValidationRule>