MODON MRE BPDEV/force-app/main/default/objects/Account/validationRules/Phone_Cannot_be_masked.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Cannot_be_masked</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
 ISCHANGED(Phone),
 CONTAINS(Phone, &apos;*&apos;)  
),
AND(
 ISCHANGED(PersonMobilePhone),
 CONTAINS(PersonMobilePhone, &apos;*&apos;)  
)
)</errorConditionFormula>
    <errorMessage>Please do not enter masked values in the Phone field</errorMessage>
</ValidationRule>