MODON MRE BPDEV/force-app/main/default/objects/Account/validationRules/ProposVATRegisterNumber_Cannot_be_masked.validationRule-meta.xml
<ValidationRule>
    <fullName>ProposVATRegisterNumber_Cannot_be_masked</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISCHANGED(Proposed_VAT_Registration_Number__c),
 CONTAINS(Proposed_VAT_Registration_Number__c, &apos;*&apos;)  
)</errorConditionFormula>
    <errorMessage>Please do not enter masked values in Proposed VAT Registration Number</errorMessage>
</ValidationRule>