MODON MRE BPDEV/force-app/main/default/objects/Account/validationRules/TradeLicenseNumber_Cannot_be_masked.validationRule-meta.xml
<ValidationRule>
    <fullName>TradeLicenseNumber_Cannot_be_masked</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISCHANGED(TradeLicenseNumber__c),
 CONTAINS(TradeLicenseNumber__c, &apos;*&apos;)  
)</errorConditionFormula>
    <errorMessage>Please do not enter masked values in Trade License Number</errorMessage>
</ValidationRule>