MODON MRE BPDEV/force-app/main/default/objects/Account/validationRules/UAEVATRegisterNumber_Cannot_be_masked.validationRule-meta.xml
<ValidationRule>
    <fullName>UAEVATRegisterNumber_Cannot_be_masked</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISCHANGED(UAEVATRegisterNumber__c),
 CONTAINS(UAEVATRegisterNumber__c, &apos;*&apos;)  
)</errorConditionFormula>
    <errorMessage>Please do not enter masked values in UAE VAT Register Number</errorMessage>
</ValidationRule>