MODON MRE BPDEV/force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PassportNumber__pc</columns>
    <columns>Masked_Passport_Number__c</columns>
    <columns>Phone__pc</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>En_Phone__pc</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.IS_PARNTER</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Accounts</label>
</ListView>