MODON MRE BPDEV/force-app/main/default/objects/Account/listViews/Broker_Accounts.listView-meta.xml
<ListView>
    <fullName>Broker_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Agency_Status__c</columns>
    <columns>Broker_Classification__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Broker_Agency</value>
    </filters>
    <label>Broker Accounts</label>
</ListView>